# xsql

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  install_python.sh  pyproject.toml  setup.cfg  setup.py
cli/: cli_args.cpp  cli_args.h  cli_utils.cpp  cli_utils.h  main.cpp
cli/export/: export_sinks.cpp  export_sinks.h
cli/render/: duckbox_renderer.cpp
cli/repl/: config.cpp  config.h  line_editor.cpp  line_editor.h  plugin_manager.cpp  repl.cpp  repl.h
cli/repl/commands/: display_mode_command.cpp  display_mode_command.h  help_command.cpp  help_command.h  khmer_number_command.cpp  khmer_number_command.h  load_command.cpp  load_command.h  max_rows_command.cpp  max_rows_command.h  mode_command.cpp  mode_command.h  plugin_install_command.cpp  registry.cpp  registry.h  reload_config_command.cpp  reload_config_command.h  summarize_command.cpp  summarize_command.h  summarize_content_command.cpp  summarize_content_command.h
cli/repl/core/: line_editor.cpp  line_editor.h  repl.cpp  repl.h
cli/repl/input/: terminal.cpp  terminal.h  text_util.cpp  text_util.h
cli/repl/state/: history.cpp  history.h
cli/repl/ui/: autocomplete.cpp  autocomplete.h  render.cpp  render.h
cli/ui/: color.cpp  color.h
core/include/xsql/: khmer_number.h  xsql.h
core/src/: ast.h  executor.cpp  html_parser.cpp  html_parser.h  khmer_number.cpp  query_parser.cpp  query_parser.h
core/src/executor/: executor.cpp  executor_internal.h  filter.cpp  order.cpp
core/src/html/: parser_impl.h  parser_libxml2.cpp  parser_naive.cpp
core/src/parser/: lexer.cpp  lexer.h  parser.cpp  parser_expr.cpp  parser_internal.h  parser_query.cpp  parser_select.cpp  parser_source.cpp  parser_util.cpp  query_parser_impl.h  tokens.h
core/src/util/: string_util.cpp  string_util.h
core/src/xsql/: execute.cpp  result_builder.cpp  table_extract.cpp  tfidf.cpp  validation.cpp  xsql_internal.h
docs/: README.md  build_diagrams.sh  generate_diagrams.py  requirements.txt  xsql-tutorial.md
plugins/: registry.json
plugins/cmake/number_to_khmer/: CMakeLists.txt  xsql_number_to_khmer_plugin.cpp
plugins/playwright_fetch/: fetch.js
python/xsql/: _core.cpp
tests/: test_cli_utils.cpp  test_exports.cpp  test_flatten_text.cpp  test_fragments.cpp  test_functions.cpp  test_guardrails.cpp  test_khmer_number.cpp  test_main.cpp  test_meta_commands.cpp  test_predicates.cpp  test_projections.cpp  test_repl.cpp  test_utils.cpp
tests/fixtures/: khmer_number_vectors.tsv
