[metadata]
name = pyxsql
version = 1.3.1
description = SQL-style querying for static HTML with a deterministic node model.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = BORANN CHANRATHNAK

[options]
packages = find:
package_dir =
    = python
python_requires = >=3.9

[options.extras_require]
test = pytest>=7.4.0

[options.packages.find]
where = python
